--- a/visualizacion/summerevolution.css
+++ b/visualizacion/summerevolution.css
@@ -125,7 +125,7 @@
 
 /* --- Leyenda --- */
 #summerevolution-legend {
-    margin-top: 20px;
+    padding-top: 1rem;
     font-size: 12px;
     color: #333;
 }
@@ -143,7 +143,7 @@
 }
 
 #summerevolution-legend summary:before {
-    content: '►';
+    content: '';
     margin-right: 5px;
     font-size: 0.9em;
     display: inline-block;
@@ -158,7 +158,7 @@
     border: 1px solid #ccc;
     padding: 15px;
     border-radius: 5px;
-    margin-top: 5px;
+    margin-top: 1rem;
     background-color: rgba(255, 255, 255, 0.7);
 }
 
